Motor Unit/Motor_Board_Rev3.cydsn/BUILD.log
--------------- Build Started: 03/15/2020 22:33:17 Project: Motor_Board_Rev3, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -D CHIP_TYPE=CHIP_TYPE_PSOC_CY8C4248AZI_L485 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c: In function 'Period_Reset_Handler':
main.c:38:9: warning: unused variable 'timer' [-Wunused-variable]
     int timer = Timer_1_ReadStatusRegister();
         ^
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/PortPSOC_CY8C4248AZI_L485.lst -g -D DEBUG -D CY_CORE_ID=0 -D CHIP_TYPE=CHIP_TYPE_PSOC_CY8C4248AZI_L485 -Wall -ffunction-sections -ffat-lto-objects -Og -c ..\CANLib\PortFiles\PortPSOC_CY8C4248AZI_L485.c -o .\CortexM0\ARM_GCC_541\Debug\PortPSOC_CY8C4248AZI_L485.o
..\CANLib\PortFiles\PortPSOC_CY8C4248AZI_L485.c: In function 'CAN_FLAG_ISR':
..\CANLib\PortFiles\PortPSOC_CY8C4248AZI_L485.c:30:30: warning: implicit declaration of function 'CAN_RX_DATA_BYTE0' [-Wimplicit-function-declaration]
     lastestMessage.data[0] = CAN_RX_DATA_BYTE0(messagePresentFlag);
                              ^
..\CANLib\PortFiles\PortPSOC_CY8C4248AZI_L485.c: In function 'SendCANPacket':
..\CANLib\PortFiles\PortPSOC_CY8C4248AZI_L485.c:132:21: error: incompatible types when assigning to type 'CAN_DATA_BYTES_MSG * {aka struct <anonymous> *}' from type 'CAN_DATA_BYTES_MSG {aka struct <anonymous>}'
     PSoCMessage.msg = PSoCData;
                     ^
..\CANLib\PortFiles\PortPSOC_CY8C4248AZI_L485.c:134:12: error: 'PSocData' undeclared (first use in this function)
     memcpy(PSocData.byte, packetToSend->data, 8);
            ^
..\CANLib\PortFiles\PortPSOC_CY8C4248AZI_L485.c:134:12: note: each undeclared identifier is reported only once for each function it appears in
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 03/15/2020 22:33:18 ---------------
